--- a/COMP2139-Assignment1.csproj
+++ b/COMP2139-Assignment1.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <Folder Include="Migrations\" />
+    <Folder Include="Views\Cars\" />
     <Folder Include="wwwroot\img\" />
   </ItemGroup>
 
