Added Registration (Need To Fix Email)

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=NorthPoleDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "SendGrid": {
+    "ApiKey": "   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"
   }
 }
