Email sender changed with new Api key and verified email.

--- a/appsettings.json
+++ b/appsettings.json
@@ -10,6 +10,6 @@
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=NorthPoleDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "SendGrid": {
-    "ApiKey": "   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"
+    "ApiKey": "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"
   }
 }
