--- a/appsettings.json
+++ b/appsettings.json
@@ -11,5 +11,33 @@
   },
   "SendGrid": {
     "ApiKey": "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"
+  },
+
+  "Serilog": {
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs\\information.log",
+          "restrictedToMinimumLevel": "Information",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs\\errors.log",
+          "restrictedToMinimumLevel": "Error",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext" ],
+    "Properties": {
+      "Application": "COMP2139-Assignment1"
+    }
   }
 }
