API key changed and registration and login back working.

--- a/appsettings.json
+++ b/appsettings.json
@@ -10,7 +10,7 @@
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=NorthPoleDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "SendGrid": {
-    "ApiKey": "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"
+    "ApiKey": "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"
   },
 
   "Serilog": {
